[package]
name = "rust-blockchain"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.42"
hex = "0.4.3"
libp2p = { version = "0.56.0", features = [
  "noise",
  "ping",
  "tcp",
  "tokio",
  "yamux",
  "gossipsub",
  "mdns",
  "macros",
  "serde",
  "request-response",
  "json",
] }
rand = "0.10.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10.9"
tokio = { version = "1.49.0", features = ["full"] }
uuid = { version = "1.19.0", features = ["v4", "serde"] }
